modal-preview: fix spacing issue in card

--- a/src/assets/sass/base/_base.scss
+++ b/src/assets/sass/base/_base.scss
@@ -6,5 +6,6 @@
 
 img {
   width: 100%;
+  height: 100%;
   object-fit: cover;
 }
