--- a/src/assets/sass/modules/Contact/_contact.scss
+++ b/src/assets/sass/modules/Contact/_contact.scss
@@ -17,6 +17,6 @@
   @include e(value) {
     font: normal normal 16px/19px $font-primary;
     word-break: break-word;
-    width: calc(100% - 40px);
+    width: calc(100% - 45px);
   }
 }
